[bumpversion]
current_version = 0.5.0
commit = True
tag = True

[metadata]
name = python-netstring
author = Jose Tiago Macara Coutinho
author_email = coutinhotiago@gmail.com
description = Pure python netstring protocol
long_description = file: README.md
long_description_content_type = text/markdown
keywords = netstring
url = https://github.com/tiagocoutinho/netstring
project_urls = 
	Bug Tracker = https://github.com/tiagocoutinho/netstring/issues
classifiers = 
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	Programming Language :: Python :: 3
	Operating System :: OS Independent
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
py_modules = netstring

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:netstring.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bdist_wheel]
universal = 0

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = docs

[aliases]
test = pytest

[tool:pytest]
addopts = --cov-config=.coveragerc --cov netstring
	--cov-report html --cov-report term
	--durations=2 --verbose
